# rphoto

./: .gitignore  .snapcraft.yaml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  RPhoto.prj  TODO  aclocal.m4  bootstrap  configure  configure.ac  configure.in
.github/workflows/: msbuild.yml
doc/: FAQ.md  HOWTO-Package-Debian.txt  Makefile.am  Makefile.in  wxRectTracker.dox
doc/use/: Makefile.am  Makefile.in  contents.hhc  help_en.html  help_fr.html  rphoto.hhp  rphoto.htb
lib/: Makefile.am  Makefile.in  config.vc pour compiler wxWidgets.vc
lib/wxFix/: Makefile.am  Makefile.in  dir.cpp  dir.h  dirctrlg.cpp  dirctrlg.h
lib/wxJPEGExifHandler/: Makefile.am  Makefile.in  imagejpg.cpp  imagejpg.h
lib/wxJPEGExifHandler/wxjpeg-headers/: jpeglib.h  source.txt
lib/wxRectTracker/: LineTracker.cpp  LineTracker.h  Makefile.am  Makefile.in  RectTracker.cpp  RectTracker.h  RectTrackerRatio.cpp  RectTrackerRatio.h  wxRectTracker.chm  wxRectTracker.dox  wxRectTracker.url
lib/wxVillaLib/: ExifHandler.cpp  ExifHandler.h  ImageBox.cpp  ImageBox.h  ImageFilters.cpp  ImageFilters.h  ImageProc.cpp  ImageProc.h  Makefile.am  Makefile.in  PipeExecute.cpp  PipeExecute.h  PropDlg.cpp  PropDlg.h  SConv.cpp  SConv.h  TablessNotebook.cpp  TablessNotebook.h  ThumbnailFactory.cpp  ThumbnailFactory.h  Thumbnails.cpp  Thumbnails.h  VerticalToolbar.cpp  VerticalToolbar.h  imagjpg.cpp  imagjpg.h  mediadec_ffmpeg.cpp  mediadec_ffmpeg.h  thumb_md5.cpp  utils.cpp  utils.h
lib/wxVillaLib/rc/: gnome-fs-loading-icon.xpm  gnome-fs-regular.xpm  gnome-mime-audio.xpm  gnome-mime-video-mpeg.xpm  noread.xpm  xine.xpm
lib/wxmisc/: ConfigDialog.cpp  ConfigDialog.h  ListCtrlResize.cpp  ListCtrlResize.h  Makefile.am  Makefile.in  str64.cpp  str64.h
locales/: fr.po  po_build.bat
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES  POTFILES.in  RPhoto.pot  cs.po  de.gmo  de.po  fr.gmo  fr.po  messages.po  po_build.bat  po_update.bat  rphoto.pot  ru.po
resources/: Makefile.am  Makefile.in  resource.h  resource.inc  resources.rc
resources/xpm/: Makefile.am  Makefile.in  xpm_FilesPhoto.xpm  xpm_hint.xpm  xpm_inclinaison.xpm  xpm_landorpo.xpm  xpm_landscap.xpm  xpm_mode_crop.xpm  xpm_mode_inclinaison.xpm  xpm_mode_redeye.xpm  xpm_page.xpm  xpm_portrait.xpm  xpm_recycle.xpm  xpm_redeye.xpm  xpm_reopen.xpm  xpm_text.xpm
snap/: snapcraft.yaml
src/: ConfigDialog.cpp  ConfigDialog.h  Makefile.am  Makefile.in  RPhoto.cpp  RPhoto.h  RatioFrame.cpp  RatioFrame.h  RatioImageBox.cpp  RatioImageBox.h  RatioPrecomp.cpp  RatioPrecomp.h  RectTracker.cpp  RectTracker.h  wrjpgcom.inc
