AC_INIT(configure.in)
AM_INIT_AUTOMAKE(RPhoto,0.2.0)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl wxWindows -----
AM_OPTIONS_WXCONFIG
AM_PATH_WXCONFIG(2.3.2, wxWin=1)
        if test "$wxWin" != 1; then
        AC_MSG_ERROR([
                wxWindows must be installed on your system.

                Please check that wx-config is in path, the directory
                where wxWindows libraries are installed (returned by
                'wx-config --libs' or 'wx-config --static --libs' command)
                is in LD_LIBRARY_PATH or equivalent variable and
                wxWindows version is 2.3.2 or above.
                ])
        fi
LIBS="-g $LIBS $WX_LIBS"
CXXFLAGS="-g $CXXFLAGS $WX_CXXFLAGS"
CPPFLAGS="-g $CPPFLAGS $WX_CPPFLAGS"
CFLAGS="-g $CFLAGS $WX_CFLAGS"
dnl --------------

dnl GetTest stuff
dnl ALL_LINGUAS="fr"
dnl AM_GNU_GETTEXT([external])

AC_OUTPUT(Makefile src/Makefile lib/Makefile lib/wxFix/Makefile lib/wxVillaLib/Makefile resources/Makefile resources/xpm/Makefile)
