noinst_LIBRARIES=libwxjpegexifhandler.a
INCLUDES=-I..
libwxjpegexifhandler_a_SOURCES= \
	imagejpg.cpp \
	imagejpg.h \
	wxjpeg-headers/jmorecfg.h \
	wxjpeg-headers/jdct.h \
	wxjpeg-headers/jerror.h \
	wxjpeg-headers/imagjpeg.h \
	wxjpeg-headers/jinclude.h \
	wxjpeg-headers/jpegint.h \
	wxjpeg-headers/jmemsys.h \
	wxjpeg-headers/jconfig.vc \
	wxjpeg-headers/jversion.h \
	wxjpeg-headers/jconfig.h \
	wxjpeg-headers/jpeg_CW_Prefix.h \
	wxjpeg-headers/jpeglib.h \
	wxjpeg-headers/jdhuff.h \
	wxjpeg-headers/jchuff.h 


