noinst_LIBRARIES=libwxVillaLib.a
libwxVillaLib_a_SOURCES = \
	ImageBox.cpp \
	ImageBox.h \
	ImageProc.cpp \
	ImageProc.h \
	TablessNotebook.cpp \
	TablessNotebook.h \
	utils.cpp \
	utils.h \
	ImageFilters.cpp \
	ImageFilters.h \
	imagjpg.cpp \
	imagjpg.h \
	Thumbnails.cpp  \
	Thumbnails.h \
	VerticalToolbar.cpp \
	VerticalToolbar.h
