
noinst_LIBRARIES = libwxvilla.a
libwxvilla_a_SOURCES = ImageBox.cpp \
    ImageFilters.cpp \
    ImageProc.cpp\
    imagjpg.cpp \
    utils.cpp \
    VerticalToolbar.cpp \
	ImageBox.h \
	ImageFilters.h \
	ImageProc.h \
	imagjpg.h \
	utils.h \
	VerticalToolbar.h \
	#PipeExecute.h \
	#PropDlg.h \
	#SConv.h \
	#TablessNotebook.h \
    #Thumbnails.cpp \
    #ThumbnailFactory.cpp\
	#ThumbnailFactory.h \
	#Thumbnails.h \
    #PipeExecute.cpp \
    #SConv.cpp\
	#ExifHandler.h \
	#ExifHandler.cpp

EXTRA_DIST= \
	rc/gnome-fs-loading-icon.png \
	rc/gnome-fs-loading-icon.xpm \
	rc/gnome-fs-regular.png \
	rc/gnome-fs-regular.xpm \
	rc/gnome-mime-audio.png \
	rc/gnome-mime-audio.xpm \
	rc/gnome-mime-video-mpeg.png \
	rc/gnome-mime-video-mpeg.xpm \
	rc/noread.png \
	rc/noread.xpm \
	rc/xine.png \
	rc/xine.xpm \
	thumb_md5.cpp


# noinst_LIBRARIES = libwxvilla.a
# libwxvilla_a_SOURCES = ExifHandler.cpp ImageBox.cpp ImageFilters.cpp ImageProc.cpp\
#  imagjpg.cpp PipeExecute.cpp PropDlg.cpp SConv.cpp\
#  TablessNotebook.cpp Thumbnails.cpp ThumbnailFactory.cpp\
#  utils.cpp VerticalToolbar.cpp
# AM_CXXFLAGS = @CXXFLAGS@ @GNOMEUI2_CFLAGS@ 
# @LIBEXIF_CFLAGS@ - replaced by RPhoto autoconf

